# Semaine-NSI

./: .gitignore  .gitmodules  README.md  docking_test.py  flocon_koch.py  imgui.ini  install.bat  install.py  install_lib.bat  installer.py  pyproject.toml  requirements.txt  test_Mandelbrot.glsl  test_mandelbrot.py  test_turtle.py
cpp_backend/: CMakeLists.txt  __init__.py  build.bat  glad.c  interface.cpp  interface.hpp  shader.cpp  shader.hpp  turtle_renderer.cpp  turtle_renderer.hpp  wrapper.cpp
cpp_backend/imgui/: imconfig.h
cpp_backend/imgui/backends/: imgui_impl_glfw.cpp  imgui_impl_opengl3.cpp
cpp_backend/include/glad/: glad.h
imgui_py_backend/: CMakeLists.txt  wrapper.cpp
imgui_py_backend/imgui/: imgui.cpp  imgui.h  imgui_demo.cpp  imgui_draw.cpp  imgui_internal.h
shaders/: mandelbrot.vert.glsl  turtle.frag.glsl  turtle.vert.glsl
src/: application.py  camera.py  exception.py  imguiRenderer.py  imgui_impl_opengl3.py  interface.py  main.py  returtle.py  shader.py  turtleRenderer.py  window.py
src/backend/: glfw_backend.py  opengl_backend.py
src/backend_imgui/: __init__.py  imgui_py_backend.pyd
src/cpp_backend/: __init__.py  cpp_backend.pyd  cpp_backend.pyi
src/fractales/: arbre.py  arbre3.py  courbe_carre_de_sierpinski.py  courbe_carre_de_sierpinski_new.py  courbe_de_hilbert.py  courbe_de_hilbert_new.py  courbe_de_koch_quadratique.py  courbe_de_koch_quadratique_inv.py  courbe_de_sierpinski.py  courbe_de_sierpinski_new.py  courbe_du_dragon.py  courbe_du_dragon_new.py  courbe_en_fleche_de_sierpinski.py  courbe_en_fleche_de_sierpinski_new.py  courbe_levy_new.py  flocon_koch.py  ligne_koch.py
src/imgui_py_backend/: __init__.py  imgui_py_backend.pyd  imgui_py_backend.pyi
src/shaders/: mandelbrot.frag.glsl  turtle.frag.glsl  turtle.vert.glsl
